[fix] 아바타 id prop 추가 및 color와 연동

--- a/stories/DataDisplay/Avatar.stories.mdx
+++ b/stories/DataDisplay/Avatar.stories.mdx
@@ -35,6 +35,12 @@ import Avatar, { avatarSizes, avatarTypes } from '@/src/Components/DataDisplay/A
                 type: "text",
             },
         },
+        id: {
+            description: "아이디",
+            control: {
+                type: "number",
+            },
+        },
     }}
 />
 
