--- a/stories/Box/Box.stories.mdx
+++ b/stories/Box/Box.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import Box from "@/src/Components/DataDisplay/Box";
+import Box, { Elements } from "@/src/Components/DataDisplay/Box";
 import { colors } from "@/src/Elements/Core/Colors";
 
 <Meta
@@ -68,17 +68,32 @@ import { colors } from "@/src/Elements/Core/Colors";
         },
       },
     },
+    element: {
+      description: "태그명",
+      control: {
+         type: "select",
+         options: Elements,
+      },
+    }
   }}
 />
 
 export const Default = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { Box },
-  template: `<div style="display: flex; justify-content:center; align-items: center; backgroundColor: #F4F5F7; width: 100%; height: 200px;">
-              <Box :has-border="hasBorder" :background-color="backgroundColor" :border-color="borderColor" :paddings="paddings" :has-shadow="hasShadow">
-                <div style="backgroundColor: #F4F5F7;">{{label}}</div>
-              </Box>
-            </div>`,
+  template: `
+    <div style="display: flex; justify-content:center; align-items: center; background-color: #F4F5F7; width: 100%; height: 200px;">
+      <Box
+        :has-border="hasBorder"
+        :background-color="backgroundColor"
+        :border-color="borderColor"
+        :paddings="paddings"
+        :has-shadow="hasShadow"
+        :element="element"
+      >
+        <div style="background-color: #F4F5F7;">{{label}}</div>
+      </Box>
+    </div>`,
 });
 
 # Box
