--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -173,6 +173,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name=IconVideoLargeFill />
                             <IconWrapper component="Icon" name=IconStarLargeFill />
                             <IconWrapper component="Icon" name=IconHamburgerLargeLine />
+                            <IconWrapper component="Icon" name=IconAllLargeLine />
                         </div>
                     </div>
                     <!--x-large-->
@@ -193,6 +194,9 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name=IconCheckXLargeFill />
                             <IconWrapper component="Icon" name=IconUnCheckedXLargeFill />
                             <IconWrapper component="Icon" name=IconStarXLargeFill />
+                            <IconWrapper component="Icon" name=IconProfileXLargeLine />
+                            <IconWrapper component="Icon" name=IconSettingXLargeLine />
+                            <IconWrapper component="Icon" name=IconSupportXLargeLine />
                         </div>
                     </div>
                     <!--2x-large-->
