--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -193,6 +193,9 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name=IconCheckXLargeFill />
                             <IconWrapper component="Icon" name=IconUnCheckedXLargeFill />
                             <IconWrapper component="Icon" name=IconStarXLargeFill />
+                            <IconWrapper component="Icon" name=IconProfileXLargeLine />
+                            <IconWrapper component="Icon" name=IconSettingXLargeLine />
+                            <IconWrapper component="Icon" name=IconSupportXLargeLine />
                         </div>
                     </div>
                     <!--2x-large-->
