[change] Badge 예시 추가

--- a/stories/DataDisplay/Badge.stories.mdx
+++ b/stories/DataDisplay/Badge.stories.mdx
@@ -154,6 +154,36 @@ export const Default = (args, { argTypes }) => ({
                             </div>
                         </Badge>
                     </div>
+                    <div class="mt-20">
+                        <Badge
+                            text="1"
+                            color="primary"
+                            size="small"
+                            :offset-x="12"
+                            :offset-y="28"
+                        >
+                            <Icon name="IconAlarmLargeLine" />
+                        </Badge>
+                        <Badge
+                            text="99+"
+                            color="primary"
+                            size="small"
+                            :offset-x="12"
+                            :offset-y="28"
+                            style="margin: 0 24px"
+                        >
+                            <Icon name="IconAlarmLargeLine" />
+                        </Badge>
+                        <Badge
+                            text="N"
+                            color="primary"
+                            size="small"
+                            :offset-x="12"
+                            :offset-y="28"
+                        >
+                            <Icon name="IconAlarmLargeLine" />
+                        </Badge>
+                    </div>
                 </div>
             `,
       components: { Badge, Icon },
@@ -233,6 +263,36 @@ export const Default = (args, { argTypes }) => ({
                             <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
                                 <Icon name="IconAlarmLargeLine" />
                             </div>
+                        </Badge>
+                    </div>
+                    <div class="mt-20">
+                        <Badge
+                            text="1"
+                            color="error"
+                            size="small"
+                            :offset-x="12"
+                            :offset-y="28"
+                        >
+                            <Icon name="IconAlarmLargeLine" />
+                        </Badge>
+                        <Badge
+                            text="99+"
+                            color="error"
+                            size="small"
+                            :offset-x="12"
+                            :offset-y="28"
+                            style="margin: 0 24px"
+                        >
+                            <Icon name="IconAlarmLargeLine" />
+                        </Badge>
+                        <Badge
+                            text="N"
+                            color="error"
+                            size="small"
+                            :offset-x="12"
+                            :offset-y="28"
+                        >
+                            <Icon name="IconAlarmLargeLine" />
                         </Badge>
                     </div>
                 </div>
