--- a/stories/DataDisplay/Badge.stories.mdx
+++ b/stories/DataDisplay/Badge.stories.mdx
@@ -1,6 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Badge, { badgeColors, badgeSizes, badgeTypes } from "@/src/Components/DataDisplay/Badge";
 import Icon from "@/src/Elements/Core/Icon/Icon";
+import Divider from "@/src/Elements/Utility/Divider";
 
 <Meta
   title="Data Display/Badge"
@@ -86,107 +87,107 @@ export const Default = (args, { argTypes }) => ({
   <Story name="Primary" height="100px">
     {{
       template: `
-                <div>
-                    <Badge
-                        text="1"
-                        color="primary"
-                        :offset-x="12"
-                        :offset-y="38"
-                    >
-                        <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                            <Icon name="IconAlarmLargeLine" />
-                        </div>
-                    </Badge>
-                    <Badge
-                        text="99+"
-                        color="primary"
-                        :offset-x="12"
-                        :offset-y="38"
-                        style="margin: 0 24px"
-                    >
-                        <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                            <Icon name="IconAlarmLargeLine" />
-                        </div>
-                    </Badge>
-                    <Badge
-                        text="N"
-                        color="primary"
-                        :offset-x="12"
-                        :offset-y="38"
-                    >
-                        <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                            <Icon name="IconAlarmLargeLine" />
-                        </div>
-                    </Badge>
-                    <div class="mt-20">
-                        <Badge
-                            text="1"
-                            color="primary"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="38"
-                        >
-                            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                                <Icon name="IconAlarmLargeLine" />
-                            </div>
-                        </Badge>
-                        <Badge
-                            text="99+"
-                            color="primary"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="38"
-                            style="margin: 0 24px"
-                        >
-                            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                                <Icon name="IconAlarmLargeLine" />
-                            </div>
-                        </Badge>
-                        <Badge
-                            text="N"
-                            color="primary"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="38"
-                        >
-                            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                                <Icon name="IconAlarmLargeLine" />
-                            </div>
-                        </Badge>
-                    </div>
-                    <div class="mt-20">
-                        <Badge
-                            text="1"
-                            color="primary"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="28"
-                        >
-                            <Icon name="IconAlarmLargeLine" />
-                        </Badge>
-                        <Badge
-                            text="99+"
-                            color="primary"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="28"
-                            style="margin: 0 24px"
-                        >
-                            <Icon name="IconAlarmLargeLine" />
-                        </Badge>
-                        <Badge
-                            text="N"
-                            color="primary"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="28"
-                        >
-                            <Icon name="IconAlarmLargeLine" />
-                        </Badge>
-                    </div>
-                </div>
-            `,
-      components: { Badge, Icon },
+        <div>
+          <div class="mt-20">
+            <Badge
+              text="1"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="28"
+            >
+              <Icon name="IconAlarmLargeLine" />
+            </Badge>
+            <Badge
+              text="99+"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="28"
+              style="margin: 0 24px"
+            >
+              <Icon name="IconAlarmLargeLine" />
+            </Badge>
+            <Badge
+              text="N"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="28"
+            >
+              <Icon name="IconAlarmLargeLine" />
+            </Badge>
+          </div>
+          <Badge
+            text="1"
+            color="primary"
+            :offset-x="12"
+            :offset-y="38"
+          >
+            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+                <Icon name="IconAlarmLargeLine" />
+            </div>
+          </Badge>
+          <Badge
+            text="99+"
+            color="primary"
+            :offset-x="12"
+            :offset-y="38"
+            style="margin: 0 24px"
+          >
+            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+              <Icon name="IconAlarmLargeLine" />
+            </div>
+          </Badge>
+          <Badge
+            text="N"
+            color="primary"
+            :offset-x="12"
+            :offset-y="38"
+          >
+            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+              <Icon name="IconAlarmLargeLine" />
+            </div>
+          </Badge>
+          <div class="mt-20">
+            <Badge
+              text="1"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="38"
+            >
+              <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+                <Icon name="IconAlarmLargeLine" />
+              </div>
+            </Badge>
+            <Badge
+              text="99+"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="38"
+              style="margin: 0 24px"
+            >
+              <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+                <Icon name="IconAlarmLargeLine" />
+              </div>
+            </Badge>
+            <Badge
+              text="N"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="38"
+            >
+              <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+                <Icon name="IconAlarmLargeLine" />
+              </div>
+            </Badge>
+          </div>
+        </div>
+      `,
+      components: { Badge, Icon, Divider },
     }}
   </Story>
 </Canvas>
@@ -198,6 +199,37 @@ export const Default = (args, { argTypes }) => ({
     {{
       template: `
                 <div>
+                    <div class="mt-20">
+                        <Badge
+                            text="1"
+                            color="error"
+                            size="small"
+                            :offset-x="12"
+                            :offset-y="28"
+                        >
+                            <Icon name="IconAlarmLargeLine" />
+                        </Badge>
+                        <Badge
+                            text="99+"
+                            color="error"
+                            size="small"
+                            :offset-x="12"
+                            :offset-y="28"
+                            style="margin: 0 24px"
+                        >
+                            <Icon name="IconAlarmLargeLine" />
+                        </Badge>
+                        <Badge
+                            text="N"
+                            color="error"
+                            size="small"
+                            :offset-x="12"
+                            :offset-y="28"
+                        >
+                            <Icon name="IconAlarmLargeLine" />
+                        </Badge>
+                    </div>
+                    <Divider class="my-10" />
                     <Badge
                         text="1"
                         color="error"
@@ -265,39 +297,9 @@ export const Default = (args, { argTypes }) => ({
                             </div>
                         </Badge>
                     </div>
-                    <div class="mt-20">
-                        <Badge
-                            text="1"
-                            color="error"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="28"
-                        >
-                            <Icon name="IconAlarmLargeLine" />
-                        </Badge>
-                        <Badge
-                            text="99+"
-                            color="error"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="28"
-                            style="margin: 0 24px"
-                        >
-                            <Icon name="IconAlarmLargeLine" />
-                        </Badge>
-                        <Badge
-                            text="N"
-                            color="error"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="28"
-                        >
-                            <Icon name="IconAlarmLargeLine" />
-                        </Badge>
-                    </div>
                 </div>
             `,
-      components: { Badge, Icon },
+      components: { Badge, Icon, Divider },
     }}
   </Story>
 </Canvas>
