--- a/stories/DataDisplay/Badge.stories.mdx
+++ b/stories/DataDisplay/Badge.stories.mdx
@@ -35,7 +35,7 @@ import Divider from "@/src/Elements/Utility/Divider";
       },
     },
     offsetY: {
-      defaultValue: 38,
+      defaultValue: 31,
       control: {
         type: "number",
       },
@@ -62,7 +62,7 @@ export const Default = (args, { argTypes }) => ({
             :offset-y="offsetY"
             :type="type"
         >
-            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+            <div>
                 <Icon name="IconAlarmLargeLine" />
             </div>
         </Badge>
