--- a/stories/DataDisplay/Badge.stories.mdx
+++ b/stories/DataDisplay/Badge.stories.mdx
@@ -1,6 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Badge, { badgeColors, badgeSizes, badgeTypes } from "@/src/Components/DataDisplay/Badge";
 import Icon from "@/src/Elements/Core/Icon/Icon";
+import Divider from "@/src/Elements/Utility/Divider";
 
 <Meta
   title="Data Display/Badge"
@@ -34,7 +35,7 @@ import Icon from "@/src/Elements/Core/Icon/Icon";
       },
     },
     offsetY: {
-      defaultValue: 38,
+      defaultValue: 31,
       control: {
         type: "number",
       },
@@ -53,19 +54,19 @@ export const Default = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { Badge, Icon },
   template: `
-        <Badge
-            :color="color"
-            :text="text"
-            :size="size"
-            :offset-x="offsetX"
-            :offset-y="offsetY"
-            :type="type"
-        >
-            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                <Icon name="IconAlarmLargeLine" />
-            </div>
-        </Badge>
-    `,
+    <Badge
+      :color="color"
+      :text="text"
+      :size="size"
+      :offset-x="offsetX"
+      :offset-y="offsetY"
+      :type="type"
+    >
+      <div>
+        <Icon name="IconAlarmLargeLine" />
+      </div>
+    </Badge>
+  `,
 });
 
 # Badge
@@ -86,77 +87,108 @@ export const Default = (args, { argTypes }) => ({
   <Story name="Primary" height="100px">
     {{
       template: `
-                <div>
-                    <Badge
-                        text="1"
-                        color="primary"
-                        :offset-x="12"
-                        :offset-y="38"
-                    >
-                        <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                            <Icon name="IconAlarmLargeLine" />
-                        </div>
-                    </Badge>
-                    <Badge
-                        text="99+"
-                        color="primary"
-                        :offset-x="12"
-                        :offset-y="38"
-                        style="margin: 0 24px"
-                    >
-                        <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                            <Icon name="IconAlarmLargeLine" />
-                        </div>
-                    </Badge>
-                    <Badge
-                        text="N"
-                        color="primary"
-                        :offset-x="12"
-                        :offset-y="38"
-                    >
-                        <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                            <Icon name="IconAlarmLargeLine" />
-                        </div>
-                    </Badge>
-                    <div class="mt-20">
-                        <Badge
-                            text="1"
-                            color="primary"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="38"
-                        >
-                            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                                <Icon name="IconAlarmLargeLine" />
-                            </div>
-                        </Badge>
-                        <Badge
-                            text="99+"
-                            color="primary"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="38"
-                            style="margin: 0 24px"
-                        >
-                            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                                <Icon name="IconAlarmLargeLine" />
-                            </div>
-                        </Badge>
-                        <Badge
-                            text="N"
-                            color="primary"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="38"
-                        >
-                            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                                <Icon name="IconAlarmLargeLine" />
-                            </div>
-                        </Badge>
-                    </div>
-                </div>
-            `,
-      components: { Badge, Icon },
+        <div>
+          <div class="mt-20">
+            <Badge
+              text="1"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="28"
+            >
+              <Icon name="IconAlarmLargeLine" />
+            </Badge>
+            <Badge
+              text="99+"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="28"
+              style="margin: 0 24px"
+            >
+              <Icon name="IconAlarmLargeLine" />
+            </Badge>
+            <Badge
+              text="N"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="28"
+            >
+              <Icon name="IconAlarmLargeLine" />
+            </Badge>
+          </div>
+          <Divider class="my-10" />
+          <Badge
+            text="1"
+            color="primary"
+            :offset-x="12"
+            :offset-y="38"
+          >
+            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+                <Icon name="IconAlarmLargeLine" />
+            </div>
+          </Badge>
+          <Badge
+            text="99+"
+            color="primary"
+            :offset-x="12"
+            :offset-y="38"
+            style="margin: 0 24px"
+          >
+            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+              <Icon name="IconAlarmLargeLine" />
+            </div>
+          </Badge>
+          <Badge
+            text="N"
+            color="primary"
+            :offset-x="12"
+            :offset-y="38"
+          >
+            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+              <Icon name="IconAlarmLargeLine" />
+            </div>
+          </Badge>
+          <div class="mt-20">
+            <Badge
+              text="1"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="38"
+            >
+              <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+                <Icon name="IconAlarmLargeLine" />
+              </div>
+            </Badge>
+            <Badge
+              text="99+"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="38"
+              style="margin: 0 24px"
+            >
+              <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+                <Icon name="IconAlarmLargeLine" />
+              </div>
+            </Badge>
+            <Badge
+              text="N"
+              color="primary"
+              size="small"
+              :offset-x="12"
+              :offset-y="38"
+            >
+              <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+                <Icon name="IconAlarmLargeLine" />
+              </div>
+            </Badge>
+          </div>
+        </div>
+      `,
+      components: { Badge, Icon, Divider },
     }}
   </Story>
 </Canvas>
@@ -167,77 +199,108 @@ export const Default = (args, { argTypes }) => ({
   <Story name="Error" height="100px">
     {{
       template: `
-                <div>
-                    <Badge
-                        text="1"
-                        color="error"
-                        :offset-x="12"
-                        :offset-y="38"
-                    >
-                        <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                            <Icon name="IconAlarmLargeLine" />
-                        </div>
-                    </Badge>
-                    <Badge
-                        text="99+"
-                        color="error"
-                        :offset-x="12"
-                        :offset-y="38"
-                        style="margin: 0 24px"
-                    >
-                        <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                            <Icon name="IconAlarmLargeLine" />
-                        </div>
-                    </Badge>
-                    <Badge
-                        text="N"
-                        color="error"
-                        :offset-x="12"
-                        :offset-y="38"
-                    >
-                        <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                            <Icon name="IconAlarmLargeLine" />
-                        </div>
-                    </Badge>
-                    <div class="mt-20">
-                        <Badge
-                            text="1"
-                            color="error"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="38"
-                        >
-                            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                                <Icon name="IconAlarmLargeLine" />
-                            </div>
-                        </Badge>
-                        <Badge
-                            text="99+"
-                            color="error"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="38"
-                            style="margin: 0 24px"
-                        >
-                            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                                <Icon name="IconAlarmLargeLine" />
-                            </div>
-                        </Badge>
-                        <Badge
-                            text="N"
-                            color="error"
-                            size="small"
-                            :offset-x="12"
-                            :offset-y="38"
-                        >
-                            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                                <Icon name="IconAlarmLargeLine" />
-                            </div>
-                        </Badge>
-                    </div>
-                </div>
-            `,
-      components: { Badge, Icon },
+        <div>
+          <div class="mt-20">
+            <Badge
+              text="1"
+              color="error"
+              size="small"
+              :offset-x="12"
+              :offset-y="28"
+            >
+              <Icon name="IconAlarmLargeLine" />
+            </Badge>
+            <Badge
+              text="99+"
+              color="error"
+              size="small"
+              :offset-x="12"
+              :offset-y="28"
+              style="margin: 0 24px"
+            >
+              <Icon name="IconAlarmLargeLine" />
+            </Badge>
+            <Badge
+              text="N"
+              color="error"
+              size="small"
+              :offset-x="12"
+              :offset-y="28"
+            >
+              <Icon name="IconAlarmLargeLine" />
+            </Badge>
+          </div>
+          <Divider class="my-10" />
+          <Badge
+            text="1"
+            color="error"
+            :offset-x="12"
+            :offset-y="38"
+          >
+            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+              <Icon name="IconAlarmLargeLine" />
+            </div>
+          </Badge>
+          <Badge
+            text="99+"
+            color="error"
+            :offset-x="12"
+            :offset-y="38"
+            style="margin: 0 24px"
+          >
+            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+              <Icon name="IconAlarmLargeLine" />
+            </div>
+          </Badge>
+          <Badge
+            text="N"
+            color="error"
+            :offset-x="12"
+            :offset-y="38"
+          >
+            <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+              <Icon name="IconAlarmLargeLine" />
+            </div>
+          </Badge>
+          <div class="mt-20">
+            <Badge
+              text="1"
+              color="error"
+              size="small"
+              :offset-x="12"
+              :offset-y="38"
+            >
+              <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+                <Icon name="IconAlarmLargeLine" />
+              </div>
+            </Badge>
+            <Badge
+              text="99+"
+              color="error"
+              size="small"
+              :offset-x="12"
+              :offset-y="38"
+              style="margin: 0 24px"
+            >
+              <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+                <Icon name="IconAlarmLargeLine" />
+              </div>
+            </Badge>
+            <Badge
+              text="N"
+              color="error"
+              size="small"
+              :offset-x="12"
+              :offset-y="38"
+            >
+              <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+                <Icon name="IconAlarmLargeLine" />
+              </div>
+            </Badge>
+          </div>
+        </div>
+      `,
+      components: { Badge, Icon, Divider },
     }}
   </Story>
 </Canvas>
@@ -249,18 +312,17 @@ export const Default = (args, { argTypes }) => ({
   <Story name="Type" height="100px">
     {{
       template: `
-                <div>
-                    <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
-                        <Icon name="IconAlarmLargeLine" />
-                          <Badge
-                            text="1"
-                            color="error"
-                          type="inline"
-                        >
-                        </Badge>
-                    </div>
-                </div>
-            `,
+        <div>
+          <div style="background: #F4F5F7; border-radius: 50px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center;">
+            <Icon name="IconAlarmLargeLine" />
+              <Badge
+                text="1"
+                color="error"
+                type="inline"
+            />
+          </div>
+        </div>
+      `,
       components: { Badge, Icon },
     }}
   </Story>
