--- a/stories/DataEntry/Input/SearchInput.stories.mdx
+++ b/stories/DataEntry/Input/SearchInput.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import SearchInput from "@/src/Components/DataEntry/SearchInput";
+import SearchInput from "@/src/Components/DataEntry/Input/SearchInput";
 import Divider from "@/src/Elements/Utility/Divider";
 
 <Meta
-    title="Etc/SearchInput"
+    title="Data Entry/Input/SearchInput"
     component={ SearchInput }
     argTypes={{
         placeholder: {
