--- a/stories/DataEntry/Input/Textfield.stories.mdx
+++ b/stories/DataEntry/Input/Textfield.stories.mdx
@@ -2,13 +2,13 @@ import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Grid from "@/src/Components/Layout/Grid";
 import Row from "@/src/Components/Layout/Row";
 import StyleCol from "@/src/Components/Layout/StyleCol";
-import TextField, { TextFieldTypes, TextFieldAligns, TextFieldColor } from "@/src/Components/DataEntry/TextField";
+import TextField, { TextFieldTypes, TextFieldAligns, TextFieldColor } from "@/src/Components/DataEntry/Input/TextField";
 import Typography from '@/src/Elements/Core/Typography/Typography';
 import Icon from '@/src/Elements/Core/Icon/Icon';
-import Loader from  '@/src/Components/Other/Loader';
+import Loader from '@/src/Components/Other/Loader';
 
 <Meta
-    title="Data Entry/TextField"
+    title="Data Entry/Input/TextField"
     component={ TextField }
     argTypes={{
         type: {
