[add] button light-success
[add] 아이콘 추가

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -142,6 +142,7 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Large</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name=IconLongArrowLargeLine />
                             <IconWrapper component="Icon" name=IconProfileLargeFill />
                             <IconWrapper component="Icon" name=IconSelectedLargeLine />
                             <IconWrapper component="Icon" name=IconReplyLargeLine color="black" />
