--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -196,6 +196,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name=IconProfileXLargeLine />
                             <IconWrapper component="Icon" name=IconSettingXLargeLine />
                             <IconWrapper component="Icon" name=IconSupportXLargeLine />
+                            <IconWrapper component="Icon" name=IconBookmarkXLargeFill />
                         </div>
                     </div>
                     <!--2x-large-->
