--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -82,7 +82,6 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconStarSmallFill" color="gray400" />
                             <IconWrapper component="Icon" name="IconMegaphoneSmallLine" />
                             <IconWrapper component="Icon" name="IconLinkSmallLine" />
-                            <IconWrapper component="Icon" name="IconSmallTextArrowLine" />
                         </div>
                     </div>
                     <!--medium-->
@@ -197,6 +196,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name=IconProfileXLargeLine />
                             <IconWrapper component="Icon" name=IconSettingXLargeLine />
                             <IconWrapper component="Icon" name=IconSupportXLargeLine />
+                            <IconWrapper component="Icon" name=IconBookmarkXLargeFill />
                         </div>
                     </div>
                     <!--2x-large-->
