add: IconBookmarkMediumFill icon

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -135,6 +135,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconVideoMediumFill" />
                             <IconWrapper component="Icon" name="IconPriceMediumLine" />
                             <IconWrapper component="Icon" name="IconProfileMediumLine" />
+                            <IconWrapper component="Icon" name="IconBookmarkMediumFill" />
                         </div>
                     </div>
                     <!--large-->
