chore: color 파일 구조 변경

--- a/stories/components/dataDisplay/content/Content.stories.mdx
+++ b/stories/components/dataDisplay/content/Content.stories.mdx
@@ -3,7 +3,7 @@ import Content, { contentTypes } from '@/components/components/dataDisplay/conte
 import Button from '@/components/components/general/button/Button';
 import Box from '@/components/components/general/Box';
 import Typography from '@/components/elements/core/typography/Typography';
-import { colorKeys } from '@/components/elements/core/colors';
+import { colorKeys } from '@/utils/constants/color';
 
 <Meta
     title="Data Display/Content/Content"
