--- a/stories/components/dataEntry/Dropdown.stories.mdx
+++ b/stories/components/dataEntry/Dropdown.stories.mdx
@@ -7,7 +7,7 @@ import SearchInput from '@/components/components/dataEntry/input/SearchInput';
 import TextField from '@/components/components/dataEntry/input/TextField';
 import Label from '@/components/components/dataDisplay/Label';
 import clickOutside from '@/directives/click-outside';
-import { colorKeys } from '@/components/elements/core/colors';
+import { colorKeys } from '@/utils/constants/color';
 
 <Meta
     title="Data Entry/Dropdown/Dropdown"
