--- a/stories/components/dataEntry/RadioButton.stories.mdx
+++ b/stories/components/dataEntry/RadioButton.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import RadioButton, { radioButtonSizes, radioColors } from '@/components/components/dataEntry/RadioButton';
-import { colorKeys } from '@/components/elements/core/colors';
+import { colorKeys } from '@/utils/constants/color';
 
 <Meta
     title="Data Entry/RadioButton"
