--- a/stories/components/etc/TellingAvatarQuote.stories.mdx
+++ b/stories/components/etc/TellingAvatarQuote.stories.mdx
@@ -5,7 +5,7 @@ import StyleCol from '@/components/layout/StyleCol';
 import TellingAvatarQuote from '@/components/components/etc/TellingAvatarQuote';
 import Icon, { IconNames } from '@/components/elements/core/icon/Icon';
 const iconOptions = [null, ...IconNames];
-import { colorKeys } from '@/components/elements/core/colors';
+import { colorKeys } from '@/utils/constants/color';
 
 <Meta
     title="Etc/TellingAvatarQuote"
