--- a/stories/components/general/Box.stories.mdx
+++ b/stories/components/general/Box.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import Box, { Elements } from '@/components/components/general/Box';
-import { colors } from '@/components/elements/core/colors';
+import { colors } from '@/utils/constants/color';
 
 <Meta
   title="General/Box"
