--- a/stories/components/general/button/NarrowButton.stories.mdx
+++ b/stories/components/general/button/NarrowButton.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import NarrowButton, { narrowButtonSizes } from '@/components/components/general/button/NarrowButton';
-import { colorKeys } from '@/components/elements/core/colors';
+import { colorKeys } from '@/utils/constants/color';
 import Icon from '@/components/elements/core/icon/Icon';
 
 <Meta
