--- a/stories/elements/core/Typography.stories.mdx
+++ b/stories/elements/core/Typography.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import Typography, { TypographyTypes, Elements, Aligns, FontWeights } from '@/components/elements/core/typography/Typography';
-import { colorKeys } from '@/components/elements/core/colors';
+import { colorKeys } from '@/utils/constants/color';
 
 <Meta
   title="Core/Typography"
