--- a/stories/elements/core/icon/EtcIcon.stories.mdx
+++ b/stories/elements/core/icon/EtcIcon.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Props, Canvas } from '@storybook/addon-docs/blocks';
 import EtcIcon, { EtcIconNames } from '@/components/elements/core/icon/EtcIcon';
-import { colorKeys } from '@/components/elements/core/colors';
+import { colorKeys } from '@/utils/constants/color';
 import IconWrapper from './IconWrapper';
 import Typography from '@/components/elements/core/typography/Typography';
 
