--- a/stories/elements/utility/Divider.stories.mdx
+++ b/stories/elements/utility/Divider.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import Divider,  { dividerTypes } from '@/components/elements/utility/Divider';
-import { colorKeys } from '@/components/elements/core/colors';
+import { colorKeys } from '@/utils/constants/color';
 
 <Meta
   title="Utility/Divider"
