--- a/stories/components/dataEntry/Select.stories.mdx
+++ b/stories/components/dataEntry/Select.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import Select, { selectSizes }  from '@/components/components/dataEntry/Select';
 import Typography from '@/components/elements/core/typography/Typography';
-import { colors } from '@/components/elements/core/colors';
+import { colors } from '@/utils/constants/color';
 
 <Meta
     title="Data Entry/Dropdown/Select"
