--- a/stories/components/message/modal/AlertModal.stories.mdx
+++ b/stories/components/message/modal/AlertModal.stories.mdx
@@ -1,7 +1,7 @@
 import { ArgsTable, Meta, Story } from '@storybook/addon-docs/blocks';
 import AlertModal from '@/components/components/message/modal/AlertModal';
 import Button from '@/components/components/general/button/Button';
-import { colorKeys } from '@/components/elements/core/colors';
+import { colorKeys } from '@/utils/constants/color';
 
 <Meta
     title="Message/Modal/AlertModal"
