fix: import icon

--- a/stories/components/message/Callout.stories.mdx
+++ b/stories/components/message/Callout.stories.mdx
@@ -1,5 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import Callout, { CalloutTypes, CalloutSizes } from '@/src/components/components/message/Callout';
+import Icon from '@/src/components/elements/core/icon/Icon';
 
 <Meta
   title="Message/Callout"
