--- a/stories/components/message/modal/WithFormModal.stories.mdx
+++ b/stories/components/message/modal/WithFormModal.stories.mdx
@@ -3,6 +3,8 @@ import WithFormModal, { aligns } from '@/components/components/message/modal/Wit
 import TextField from '@/components/components/dataEntry/input/TextField';
 import Button from '@/components/components/general/button/Button';
 import Typography from '@/components/elements/core/typography/Typography';
+import InputGroup from '@/components/components/dataEntry/input/InputGroup';
+import Select from '@/components/components/dataEntry/Select';
 
 <Meta
     title="Message/Modal/WithFormModal"
