fix: import component

--- a/stories/components/dataDisplay/Tabs.stories.mdx
+++ b/stories/components/dataDisplay/Tabs.stories.mdx
@@ -1,6 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import Tabs, { TabsTypes, TabsDirections } from '@/components/components/dataDisplay/Tabs';
 import Button from '@/components/components/general/button/Button';
+import Typography from '@/components/elements/core/typography/Typography';
+import Chip from '@/components/components/dataDisplay/chips/Chip';
+import Badge from '@/components/components/dataDisplay/Badge';
 
 <Meta
     title="Data Display/Tabs"
