add: IconCalendarError2XLargeFill icon

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -206,6 +206,7 @@ export const Default = (args, { argTypes }) => ({
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name=IconProfile2XLargeFill />
                             <IconWrapper component="Icon" name=IconWriting2XLargeLine />
+                            <IconWrapper component="Icon" name=IconCalendarError2XLargeFill />
                         </div>
                     </div>
                     <!--4x-large-->
