fix: storybook에도 tooltip.js 적용

--- a/stories/components/message/Popover.stories.mdx
+++ b/stories/components/message/Popover.stories.mdx
@@ -1,5 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Popover, { placements } from '@/components/components/message/Popover';
+import Popover from '@/components/components/message/Popover';
+import { placements } from '@/utils/constants/tooltip';
 import Typography from '@/components/elements/core/typography/Typography';
 import Icon from '@/components/elements/core/icon/Icon';
 import Button from '@/components/components/general/button/Button';
