--- a/stories/components/message/Tooltip.stories.mdx
+++ b/stories/components/message/Tooltip.stories.mdx
@@ -1,5 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Tooltip, { placements } from '@/components/components/message/Tooltip';
+import Tooltip from '@/components/components/message/Tooltip';
+import { placements } from '@/utils/constants/tooltip';
 import Icon from '@/components/elements/core/icon/Icon';
 import NewGrid from '@/components/layout/NewGrid';
 import NewRow from '@/components/layout/NewRow';
