--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -174,6 +174,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name=IconVideoLargeFill />
                             <IconWrapper component="Icon" name=IconStarLargeFill />
                             <IconWrapper component="Icon" name=IconHamburgerLargeLine />
+                            <IconWrapper component="Icon" name=IconWarningLargeFill />
                         </div>
                     </div>
                     <!--x-large-->
